tomcatdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: tommygun
spec:
  replicas: 2
  selector:
    matchLabels:
      ram: lakhan

  template:
    metadata:
      labels:
        ram: lakhan
    spec:
     
      containers:
        - name: tomcat
          image: tomcat
          ports:
            - containerPort: 8080
