cip.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster-ip
  
spec:
  type: ClusterIP
  selector: 
  ports:
    - port: 8080
      targetPort: 8080
