service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: exsrv
  
spec:
  type: NodePort
  ports:
    - port: 9090
      targetPort: 8080
      nodePort: 30099
  selector:
    ram: lakhan
