ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingsrv
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules: 
    - http:
        paths:
          - path: /hello  
            backend:
              serviceName: cluster-ip
              servicePort: 8080
